# akashi

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  flake.nix  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.json  turbo.json
.sqlx/: query-1ec820c71fdeac5f4d0a146eab1884aabc5c6bdce37c73963584961ac820e8c3.json  query-288ffca8cc20662429c0a289ee414fbf41fe44b5d732b07e9e3ebf80c1166850.json  query-2c8e8639aed705abd1b6bfa419df63454b2a6edd6932a5eeca7f413439a9a0a7.json  query-58ae36ced129f68088a047920e1f33d1e47064eb3ed663103c6dafec929406b5.json  query-a468f6edb21f3c2382e662bbe3aafe40e3b1d2c70ee47534d7d242cc1b6c46bd.json  query-db83847d2e9ef0fd3928158d59a4c13dee59cacf50dd2fd2aa20c1ce08793a12.json
akashi-cli/: Cargo.toml
akashi-cli/src/: cli.rs  main.rs  operations.rs  util.rs
akashi-cli/src/cli/: commands.rs
akashi-cli/src/operations/: grayscale.rs  invert.rs  rembg.rs  speech.rs
akashi-cli/src/util/: color.rs  gif.rs  images.rs  media.rs  video.rs
akashi-commands/: Cargo.toml
akashi-commands/src/: debug.rs  lib.rs  reminder.rs  tag.rs  util.rs
akashi-commands/src/debug/: disable_command.rs  enable_command.rs  register.rs  servers.rs
akashi-commands/src/reminder/: create.rs
akashi-commands/src/tag/: create.rs  edit.rs  get.rs  list.rs  raw.rs
akashi-commands/src/util/: emoji.rs  help.rs  invidious.rs  register.rs  stats.rs  translate.rs  vote.rs
akashi-core/: Cargo.toml
akashi-core/src/: main.rs  tracing_utils.rs
akashi-database/: Cargo.toml
akashi-database/.sqlx/: query-2487346f1ed40518d7942f83bccb1d63471375271620b55fa7a8b58314057b36.json  query-2c8e8639aed705abd1b6bfa419df63454b2a6edd6932a5eeca7f413439a9a0a7.json  query-442cd24af32bd69fa209edb461bebaea33b279268e30ba6521cd63362f334988.json  query-6488be1eb461c6c7beab4f309128e5e89eb0a71fc393aac7cadd687932114568.json  query-8182fda920170c9b7b4a66b29835500dc566f7f9af680eee79ebff7753a57f73.json  query-8b30ed2eba5424131a25f02f84c96634e1e53e4d34d176c11864b71e84a2be62.json  query-94429117f65919a040ddf8f53afa37aa4e4a827f388803421f0dac09783bcbc4.json  query-b69a6f42965b3e7103fcbf46e39528466926789ff31e9ed2591bb175527ec169.json  query-b9d2b00a13d7a6500f1be6b6eea237011903f83edf73a3ae5c3324aca60be9d7.json  query-bf09c78918f952f758bfc61d8cb7c318b289c8c4ee5b5ce10bbfd169c84d8828.json  query-cd18a9b3383791951a67c6a2e01617d742afc915047f995dd556ab8d44628868.json
akashi-database/src/: error.rs  lib.rs  models.rs
akashi-database/src/models/: guild.rs  tag.rs  user.rs
akashi-guild-poster/: Cargo.toml
akashi-guild-poster/src/: lib.rs
akashi-handlers/: Cargo.toml
akashi-handlers/src/: events.rs  handlers.rs  lib.rs
akashi-shared/: Cargo.toml
akashi-shared/src/: error.rs  lib.rs  structs.rs  util.rs
akashi-strings/: Cargo.toml
akashi-strings/src/: lib.rs
akashi-strings/src/algorithms/: base64.rs  fuzzy.rs  jaro.rs  mod.rs
akashi-strings/src/discord/: ansi.rs  markdown.rs  mod.rs  table.rs
akashi-strings/src/utils/: encode.rs
apps/bot/: Cargo.toml  package.json  seyfert.config.js  seyfert.config.ts  tsconfig.json  tsup.config.ts
apps/bot/src/: index.ts  main.rs
apps/bot/src/commands/: mod.rs  ping.ts
apps/bot/src/commands/admin/: flush.ts  parent.ts
apps/bot/src/commands/config/: parent.ts
apps/bot/src/commands/image/: invert.rs  invert.ts  metadata.ts  mod.rs  parent.ts  quality.rs  raw.ts  reformat.ts  resize.rs  resize.ts  tutorial.ts
apps/bot/src/commands/meme/: caption.rs  caption.ts  distracted.ts  doge.ts  mod.rs  parent.ts  rip.ts  speech-balloon.ts  speech.rs
apps/bot/src/commands/ows/: parent.ts  remove.ts  set.ts
apps/bot/src/commands/tag/: create.ts  edit.ts  get.ts  parent.ts  remove.ts
apps/bot/src/commands/util/: help.rs  mod.rs  parent.ts  qr.ts  stats.rs  stats.ts  translate.ts  whois.ts
apps/bot/src/events/: botReady.ts  messageCreate.ts  messageUpdate.ts
apps/bot/src/lib/: cache.ts  parser.ts  utils.ts
apps/bot/src/lib/constants/: context.ts  options.ts  regexes.ts  storage-keys.ts  variables.ts
apps/bot/src/lib/database/: user.ts
apps/bot/src/lib/storage/: image.ts
apps/bot/src/lib/structures/: context.ts  image-api.ts  ipx.ts  memge.ts  porter.ts
apps/bot/src/lib/types/: api.ts  common.ts  errors.ts
apps/bot/src/lib/utils/: discord.ts  format.ts
apps/bot/src/middlewares/: admin.middleware.ts  index.ts  tag-owner.middleware.ts  tokens.middleware.ts
apps/bot/src/middlewares/misc/: admin.ts
apps/bot/src/middlewares/tags/: tag-owner.ts  tag-uses.ts
apps/bot/src/middlewares/tokens/: required-tokens.ts
apps/bot/src/utils/: discord.rs  filetype.rs  mod.rs  table.rs
apps/bot/src/utils/markup/: ansi.rs  (+2 more)
apps/illumi/: README.md  nitro.config.ts  package.json
apps/illumi/src/utils/: load-image.ts
apps/image-api/: README.md  package.json  tsconfig.json
apps/image-api/src/: app.module.ts  main.ts
apps/image-api/src/services/: imagescript.service.ts  sharp.service.ts
apps/ipx/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/ipx/src/: index.ts
apps/memge/: README.md  nitro.config.ts  package.json
apps/memge/src/routes/: index.ts
apps/memge/src/types/: imagescript.ts
apps/porter/: README.md  nitro.config.ts  package.json
apps/porter/src/routes/: index.ts  translate.post.ts  whois.post.ts
apps/porter/src/types/: whois.ts
apps/vault/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/vault/src/: index.ts
migrations/: 20250126234548_start.sql  20250128232906_board.sql  20250203012257_users.sql  20250203012401_users_created_at.sql  20250203013852_tags.sql  20250313222306_clean.sql
src/: main.rs
src/commands/: mod.rs
src/commands/image/: blur.rs  grayscale.rs  invert.rs  mod.rs  quality.rs  resize.rs  to.rs
src/commands/meme/: caption.rs  mod.rs  speech.rs
src/commands/util/: help.rs  mod.rs  servers.rs  stats.rs
src/utils/: discord.rs  filetype.rs  mod.rs  table.rs
src/utils/discord/: cache.rs  image.rs  mod.rs  rand.rs
src/utils/markup/: markdown.rs
(+35 files in other folders)
