[workspace]
resolver = "2"
members = [
	"akashi-cli",
	"akashi-commands",
	"akashi-core",
	"akashi-database",
	"akashi-guild-poster",
	"akashi-handlers",
	"akashi-shared",
	"akashi-strings",
]

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "json"] }

# Environment Management
dotenvy = "=0.15.7"

# Discord Libraries
poise = { git = "https://github.com/mkrasnitski/poise", branch = "serenity-next" }

# Fetching & JSON
isahc = { version = "1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Database
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }

# Error Handling & Utilities
anyhow = { version = "1" }

# Date & Time
chrono = { version = "0" }

# Data Structures
dashmap = { version = "6", features = ["typesize"] }

# Regular Expressions
regex = "1"

# Translation
translators = { version = "0.1.5", features = ["google", "tokio-async"] }

# Custom Libraries
tagscript = { git = "https://github.com/akashibot/tagscript" }
unstorage-rs = { git = "https://github.com/akashibot/unstorage-rs" }

# System Information
sysinfo = "0.33.1"
